# agent-protocol

./: CONTRIBUTING.md  README.md  api.html  openapi.json
client-python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
client-python/.openapi-generator/: FILES
client-python/ap_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
client-python/docs/: Agent.md  AgentCapabilities.md  AgentSchema.md  AgentSchemas.md  AgentsApi.md  BackgroundRunsApi.md  Config.md  Content.md  ContentOneOfInner.md  ErrorResponse.md  Input.md  Item.md  Message.md  MessageAnyBlock.md  MessageTextBlock.md  Run.md  RunCreate.md  RunSearchRequest.md  RunStatus.md  RunStream.md  RunWaitResponse.md  RunsApi.md  SearchAgentsRequest.md  SearchItemsResponse.md  StoreApi.md  StoreDeleteRequest.md  StoreListNamespacesRequest.md  StorePutRequest.md  StoreSearchRequest.md  StreamMode.md  Thread.md  ThreadCheckpoint.md  ThreadCreate.md  ThreadPatch.md  ThreadSearchRequest.md  ThreadState.md  ThreadStatus.md  ThreadsApi.md
client-python/test/: test_agent.py  test_agent_capabilities.py  test_agent_schema.py  test_agent_schemas.py  test_agents_api.py  test_background_runs_api.py  test_config.py  test_content.py  test_content_one_of_inner.py  test_error_response.py  test_input.py  test_item.py  test_message.py  (+25 more)
server/: .gitignore  pyproject.toml
server/ap_server/: dependencies.py  main.py  models.py
server/ap_server/routers/: agents.py  background_runs.py  runs.py  stateless_runs.py  store.py  threads.py
tooling/: Makefile  pyproject.toml
(+41 files in other folders)
